Added reverse class order serializer